@@ -1,3 +1,9 @@
+Wed Nov 07 17:45:48 GMT 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/searchconnection.py: Add extra "query" parameter to
+	  summarise() and highlight() methods, which can be used to
+	  override the query used as the basis of the highlighting.
+
 Wed Nov 07 17:30:02 GMT 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/highlight.py: Fix tests to correspond to recent change.
